# CupidsShield

./: .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  README.md  appeals_examples.py  demo_hitl.py  moderation_examples.py  pyproject.toml  requirements.txt  unified_demo.py
agents/: __init__.py  appeals_agent.py  moderation_agent.py  moderation_agent_hitl.py  prompt_loader.py  state.py
config/: appeals_config.yaml  moderation_config.yaml
data/: __init__.py  db.py  schema.sql  vector_store.py
examples/: __init__.py  demo_scenarios.py  sample_cases.json
mcp_servers/: __init__.py
mcp_servers/database/: __init__.py  queries.py  server.py
mcp_servers/moderation_tools/: __init__.py  server.py  tools.py
mcp_servers/notifications/: __init__.py  notifiers.py  server.py
monitoring/: __init__.py  tracing.py
prompts/: README.md
prompts/appeals/: appeal_review.txt  evidence_evaluation.txt
prompts/moderation/: age_verification_check.txt  base_moderation.txt  fake_profile_analysis.txt  harassment_detection.txt  scam_detection.txt
ui/: app.py  hitl_routes.py
ui/templates/: appeal_detail.html  appeals.html  base.html  case_detail.html  index.html  metrics.html  queue.html
